# mawrid-ai-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  LICENSE  README.md  SETUP.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  fixes.txt  output.txt  pyproject.toml
.claude/commands/: check-ci.md  check-dunning.md  check-enrichment.md  check-hitl.md  check-procurement.md  check-rag.md  check-suppliers.md  check-tenant.md  phase-status.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: nightly.yml  pr.yml  push.yml
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260610_0001_initial_schema.py  20260610_0002_add_barcode_to_products.py  20260610_0003_enrichment_columns.py  20260611_0004_procurement.py  20260611_0005_rag_chunks.py  20260612_0006_supplier_performance.py  20260612_0007_dunning_schema_extensions.py  20260612_0008_supplier_delivery_events.py  20260612_0009_widget_settings.py  20260616_0010_enrichment_sources_supplier_location.py  20260616_0011_product_supplier_tags.py  20260617_0012_sheet_catalogues_supplier_profile.py  20260617_0013_supplier_moq.py  20260617_0014_po_message_thread.py  20260618_0015_supplier_network.py  20260618_0016_supplier_relationship.py  20260619_0017_gmail_connections.py  20260619_0018_shipment_arrival_at.py
backend/app/: main.py
backend/ml_config/: drift_thresholds.yaml  eval_thresholds.yaml
backend/ml_models/: .gitkeep
backend/prompts/: discovery_agent.yaml  enrichment_agent.yaml  rag_system.yaml
docs/: connect-gmail-setup.md  remaining-fixes-spec.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
n8n/workflows/: wf01_tenant_provisioning.json  wf02_document_uploaded.json  wf03_enrichment_complete.json  wf04_po_approved.json  wf05_shipment_arrival_alert.json  wf06_goods_received.json  wf07_order_confirmed.json  wf08_payment_received.json  wf09_payables_trigger.json  wf10a_b2c_day3.json  wf10b_b2c_day7.json  wf10c_b2c_day14.json  wf11_stock_threshold.json  wf12_receivables_day7.json  wf13_receivables_day14.json  wf14_receivables_day21.json  wf15_dispute_filed.json
resources/coding-guidelines/: Advanced_RAG_Techniques_Guide.docx
resources/phases/: progress.md
resources/plan/: plan.md
resources/topics/: topics.md
resources/understanding_brainstorm/: approved.md
scripts/: compact-docker-disk.ps1  generate_intent_data.py  generate_supplier_data.py  generate_tone_data.py  init-postgres.sql  reset_all.sh  reset_catalog.sh  seed-vault.sh  seed_demo.sh  seed_factories.py
searxng/: settings.yml
specs/: constitution.md
specs/features/: agentic.md  dunning.md  enrichment.md  hitl.md  procurement.md  rag.md  storefront.md  supplier.md
(+283 files in other folders)
