[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[project]
name = "mawrid-ai-platform"
version = "0.1.0"
description = "Multi-tenant AI operations platform for importers/distributors"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.41.0",

    # Data validation
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Cache & Queue
    "redis>=5.2.0",
    "arq>=0.26.1",

    # Auth
    "pyjwt[crypto]>=2.9.0",
    "argon2-cffi>=23.1.0",

    # LLM & Embeddings
    "openai>=1.57.0",
    "tiktoken>=0.8.0",
    "tenacity>=9.0.0",

    # LangChain / LangGraph
    "langchain>=0.3.7",
    "langchain-openai>=0.2.10",
    "langgraph>=0.2.55",
    "langgraph-checkpoint-redis>=0.0.4",

    # NeMo Guardrails
    "nemoguardrails>=0.10.1",

    # ML / Scikit
    "scikit-learn>=1.5.2",
    "imbalanced-learn>=0.12.4",
    "numpy>=2.1.0",
    "scipy>=1.14.0",

    # ONNX Runtime (DistilBERT Tier 2)
    "onnxruntime>=1.20.1",
    "optimum>=1.23.3",
    "transformers>=4.46.3",

    # Sentence Transformers (Cross-Encoder reranking)
    "sentence-transformers>=3.3.1",
    # Explicit so [tool.uv.sources] can redirect to the CPU-only wheel
    "torch>=2.0.0",

    # Storage
    "aioboto3>=13.2.0",

    # Payments
    "stripe>=11.3.0",
    "httpx>=0.28.0",

    # PII / Privacy
    "presidio-analyzer>=2.2.356",
    "presidio-anonymizer>=2.2.356",

    # Structured logging
    "structlog>=24.4.0",

    # Observability
    "langsmith>=0.1.147",
    "mlflow>=2.18.0",

    # Task scheduling (dunning Track 1 daily checks)
    "apscheduler>=3.10.4",

    # MCP
    "mcp>=1.2.0",

    # Network
    "networkx>=3.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.4",
    "ragas>=0.2.6",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

# CPU-only PyTorch — no CUDA packages in Docker (saves ~3 GB per build).
# sentence-transformers Cross-Encoder reranking runs fine on CPU.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
